--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
   "dependencies": {
     "body-parser": "^2.2.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "ethers": "^5.8.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "web3": "^4.16.0"
